--- a/css/style.css
+++ b/css/style.css
@@ -448,11 +448,13 @@ p{
 }
 
 .btn{
-    width: 10%;
+   width: 8%;
+    height: 3%;
+    text-decoration: none;
     background-color: #3f63bf;
     color: #fff;
     font-size: 14px;
-    padding: 8px;
+    padding: 7px;
     border: 2px solid #3f63bf;
     display: flex;
     margin-top: 620px;
